# dircat-rust

./: .pre-commit-config.yaml  COMMIT.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
assets/: index.html
src/: cancellation.rs  cli.rs  constants.rs  core_types.rs  errors.rs  example.rs  git.rs  lib.rs  main.rs  prelude.rs  progress.rs  security.rs  signal.rs  web.rs
src/config/: builder.rs  builder_logic.rs  mod.rs  parsing.rs  path_resolve.rs  validation.rs
src/discovery/: entry_processor.rs  mod.rs  walker.rs
src/filtering/: extension.rs  file_type.rs  lockfile.rs  mod.rs  process_last.rs  size.rs  text_detection.rs
src/git/: api.rs  clone.rs  mod.rs  ops.rs  url.rs
src/output/: dry_run.rs  file_block.rs  formatter.rs  header.rs  mod.rs  summary.rs  writer.rs
src/processing/: content_filters.rs  content_reader.rs  counter.rs  mod.rs
src/processing/filters/: comments.rs  empty_lines.rs  mod.rs
tests/: basic.rs  common.rs  content_processing.rs  content_processing_adv.rs  dry_run.rs  edge_cases.rs  errors.rs  filter_binary.rs  filter_combinations_adv.rs  filter_extensions.rs  filter_gitignore.rs  filter_gitignore_advanced.rs  filter_ignore.rs  filter_lockfiles.rs  filter_recursive.rs  filter_regex.rs  filter_size.rs  filtering_combinations.rs  format_backticks.rs  format_combinations.rs  format_header.rs  format_lines.rs  format_ticks.rs  git_api_download.rs  git_cache_locking.rs  git_input.rs  git_ip_pinning.rs  git_update.rs  library_api.rs  library_pipeline.rs  output_file.rs  output_format.rs  process_order.rs  process_order_adv.rs  repro_dry_run_order.rs  repro_github_url_parsing.rs  repro_recursive_glob.rs  safe_mode_config.rs  safe_mode_core.rs  safe_mode_persistence.rs  (+48 more)
