[package]
name = "dircat"
version = "1.0.1"
edition = "2021"
description = "High-performance Rust utility that concatenates and displays directory contents, similar to the C++ DirCat."
authors = ["Romelium author@romelium.com>"]
license = "MIT"
repository = "https://github.com/romelium/dircat-rust"
readme = "README.md"
keywords = ["cli", "ai", "cat", "utility", "llm"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["git", "clipboard", "progress", "web"]
# Enables cloning git repositories and downloading from the GitHub API.
git = ["git2", "sha2", "hex", "reqwest", "serde", "serde_json"]
# Enables copying output to the system clipboard.
clipboard = ["arboard"]
# Enables the progress bar during long operations like git clones.
progress = ["indicatif", "atty"]
# Enables the Web UI server
web = ["dep:axum", "dep:tokio", "dep:tower-http", "dep:rust-embed", "dep:open", "dep:mime_guess", "dep:tokio-stream", "dep:futures", "serde", "serde_json"]

[dependencies]
# --- Caching ---
directories = "5.0"
# Regex matching for filtering
regex = "1.12"
# .gitignore handling (respecting ignore rules)
ignore = "0.4" # Note: Integrates well with walkdir
# Parsing human-readable byte sizes (e.g., "1M", "512k")
byte-unit = "5.1"
# Glob pattern matching (for --process-last)
glob = "0.3"
# Static Regex compilation helper
once_cell = "1.21"
# Content type detection (text vs binary)
content_inspector = "0.2"
# Trait object cloning
dyn-clone = "1.0"
# Serialization (Used for Git API and Web UI)
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# --- GitHub API Interaction ---
# HTTP client for downloading GitHub directory contents via API
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true } # For making HTTP requests

# --- Git Repository Cloning ---
# Enables cloning remote git repos given as input
git2 = { version = "0.20", features = ["vendored-libgit2", "vendored-openssl"], optional = true }
# Hashing for creating cache directory names
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }

# --- Performance ---
# Parallel iteration/processing
rayon = "1.11" # rayon is used for file processing, not just git, so it remains mandatory
# Parallel directory walking (used by ignore crate)
# Channel for discovery producer/consumer
crossbeam-channel = "0.5"

# --- Command Line Interface ---
# Argument parsing
clap = { version = "4.5", features = ["derive", "cargo"] } # Enable derive macro and cargo env vars

# --- Error Handling ---
# Application-level error handling (simpler Result management)
anyhow = "1.0"
# Deriving std::error::Error for custom error types
thiserror = "1.0"

# --- Concurrency & Signals ---
# Ctrl+C / Signal handling for graceful shutdown
ctrlc = { version = "3.5", features = ["termination"] } # termination feature simplifies setup

# --- Input/Output & Formatting ---
# (Using std::fs, std::io, std::path primarily)
# For cross-platform clipboard access (-p/--paste option)
arboard = { version = "3.6", optional = true }
# For checking if stdout/stderr is a TTY
atty = { version = "0.2", optional = true }
# For displaying progress bars during long operations
indicatif = { version = "0.17", optional = true }

# --- Web UI Dependencies ---
axum = { version = "0.7", features = ["macros"], optional = true }
tokio = { version = "1.48", features = ["full"], optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
futures = { version = "0.3", optional = true }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"], optional = true }
rust-embed = { version = "8.9", optional = true }
open = { version = "5.3", optional = true }
mime_guess = { version = "2.0", optional = true }

# --- Logging (Optional but Recommended) ---
# Logging facade
log = "0.4"
# Simple logger implementation controlled by RUST_LOG env var
env_logger = "0.11"
# Tracing facade (added for regex.rs instrumentation)
tracing = "0.1"
tempfile = "3.23"

# --- Platform Specific (If needed later) ---
# Example: Might need platform-specific crates for certain features if std lib isn't enough
# [target.'cfg(windows)'.dependencies]
# winapi = "0.3"
# [target.'cfg(unix)'.dependencies]
# libc = "0.2"

[[bin]]
name = "dircat"
path = "src/main.rs"

# Dependencies for running tests and benchmarks
[dev-dependencies]
# Integration testing CLI applications
assert_cmd = "2.1"
# Assertions for assert_cmd output/status
predicates = "3.1"
# Creating temporary files/directories for tests
tempfile = "3.23"
# Benchmarking harness
criterion = { version = "0.5", features = ["html_reports"] }
# For capturing stdout in tests (optional)
# gag = "1.0"
# For testing async web bodies
http-body-util = "0.1"
# For testing axum services (oneshot)
tower = { version = "0.5", features = ["util"] }
